# podman-autoupdate-hook

./: Cargo.toml  Dockerfile  readme.md
src/: headers.rs  main.rs
