[package]
edition = "2021"
name = "podman-autoupdate-hook"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "A webhook server to manually trigger podman auto-update"

[dependencies]
axum = "0.6.4"
axum-auth = "0.4.0"
clap = { version = "4.1.4", features = ["derive", "env"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.4.13"
tower_governor = { version = "0.0.4", features = ["tracing"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[profile.release]
strip = true
lto = true
opt-level = "z" # size
codegen-units = 1